--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -239,7 +239,7 @@
  germany.88.d:0 "Despite our attempts to allow Bonple to hand over Danzig peacefully, even vowing to give up our claims on other Kuro territories in exchange, we have been met with refusal. As expected, the world gives nothing to us that we do not seize by force."
  germany.88.a:0 "They know very well what the alternative is."
   germany.1002.t:0 "Honor the Molotov-Ribbentrop Pact?"
- germany.1002.desc:1 "Kuromorimine and [SOU.GetNameDef] have already made agreements to partition Bonple between its east and west halves, however our occupation of the east has caused something of a complication in this arrangement. Though our Kuro allies fully expect we’ll surrender the promised Polish territories to [SOU.GetNameDef], we could instead break the pact and continue our occupation."
+ germany.1002.desc:1 "Kuromorimine and [SOU.GetNameDef] have already made agreements to partition Bonple between its east and west halves, however our occupation of the east has caused something of a complication in this arrangement. Though our Kuro allies fully expect we'll surrender the promised Polish territories to [SOU.GetNameDef], we could instead break the pact and continue our occupation."
  germany.1002.b:0 "Bonple is ours!"
  germany.1003.t:0 "[From.GetNameDefCap] Breaks the Pact!"
  germany.1003.desc:1 "Despite the decision to cede eastern Bonple to [SOU.GetNameDef], our allies in [From.GetNameDef] have chosen to continue their occupation of Bonple, formally breaking the Molotov-Ribbentrop pact!"
@@ -607,7 +607,7 @@
  soviet.62.d:0 "Despite repeated assurances, the Soviets have so far not pulled back their troops, nor have they made any move to turn over the territories and return to the borders we have agreed on. It appears that they have no intention of following the treaty."
  soviet.62.a:0 "It was not even worth the ink!"
  soviet.70.t:0 "[SOV.GetName] Pressure"
- soviet.70.desc:0 "Despite the liberation of our homeland from [GER.GetAdjective] occupation, we still have the ever present [SOV.GetName] to contend with. They are now refusing to acknowledge the legitimacy of our government unless the [SOV.GetAdjective] aligned communists in the country are allowed to take a more prominent role in the administration. In reality, this is a thinly veiled threat from the [SOV.GetAdjective]s that they expect us to align ourselves with them. Meanwhile, our partners in the west seem unwilling to offer us any support in resisting [SOV.GetLeader]’s demands."
+ soviet.70.desc:0 "Despite the liberation of our homeland from [GER.GetAdjective] occupation, we still have the ever present [SOV.GetName] to contend with. They are now refusing to acknowledge the legitimacy of our government unless the [SOV.GetAdjective] aligned communists in the country are allowed to take a more prominent role in the administration. In reality, this is a thinly veiled threat from the [SOV.GetAdjective]s that they expect us to align ourselves with them. Meanwhile, our partners in the west seem unwilling to offer us any support in resisting [SOV.GetLeader]'s demands."
  soviet.70.a:0 "We are in no state to pick another fight."
  soviet.70.b:0 "We will not be dictated to by [SOV.GetLeader]."
  soviet.71.t:0 "[POL.GetAdjective] Alignment Agreed"
@@ -618,7 +618,7 @@
  soviet.72.a:0 "We shall crush the [POL.GetAdjective] bourgeoisie once and for all."
  soviet.72.b:0 "The people are tired of war, we must find another way."
  soviet.73.t:0 "[SOV.GetNameDef] Backs Down"
- soviet.73.desc:0 "Recent tension surrounding [POL.GetName]’s foreign policy alignment has subdued recently as [SOV.GetNameDef] backs away from its earlier aggressive rhetoric. Although the chance of another invasion has reduced, we should remain vigilant with regards to our eastern neighbor and their pawns."
+ soviet.73.desc:0 "Recent tension surrounding [POL.GetName]'s foreign policy alignment has subdued recently as [SOV.GetNameDef] backs away from its earlier aggressive rhetoric. Although the chance of another invasion has reduced, we should remain vigilant with regards to our eastern neighbor and their pawns."
  soviet.73.a:0 "We must be on our guard."
  finland.1.t:1 "The [FROM.GetAdjective]s Demand Karelia"
  finland.1.d:1 "Citing the need to create a security buffer for [195.GetName], officials from [FROM.GetNameDef] have asked for a revision of our borders. They want us to cede Karelia to them, and judging by the build-up of [FROM.GetAdjective] forces along our border, they will not take no for an answer. How should we respond?"
@@ -3325,6 +3325,6 @@ soviet.28.d:1 "The world may never know if Katyusha's purges were targeting the 
  GRE_turkey_surrenders:0 "Kebab backed down to Sparta demands"
  germany.1050.t:0 "Death of the Erika"
  germany.1050.desc:0 "The Führer, $GER_adolf_hitler$, has been found dead in his bunker. With enemy forces closing in, it seems the Deputy Führer decided to take Her own life rather than risk capture. In order to prevent demoralization of the troops, our propaganda outlets are being briefed that Hitler died fighting heroically to his last breath in the face of overwhelming enemy forces. However, our more immediate issue is who will step in to replace the Führer?"
- germany.1050.a:0 "$GER_karl_donitz$ was the Führer’s preferred successor."
- germany.1050.b:0 "$GER_albert_speer$ will fulfill the Führer’s ambitions."
+ germany.1050.a:0 "$GER_karl_donitz$ was the Führer's preferred successor."
+ germany.1050.b:0 "$GER_albert_speer$ will fulfill the Führer's ambitions."
  germany.1050.c:0 "$GER_heinz_guderian$ will get us out of this mess."
