--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -135,8 +135,6 @@
  GER_build_up_military_desc:0 "We must be able to keep up with Pravda and St. Gloriana's production if we are to unleash our full might on them. The world shall tremble at our might!"
  GER_long_term_rearmament: "Long-term Rearmament"
  GER_long_term_rearmament_desc: "We must be patient and careful with our rearmament to ensure the proper ordinance and quality of things."
- GER_panzer_build_up:0 "Panzer Build up"
- GER_panzer_build_up_desc:0 "The Panzer army is front and centre to our plans, we must build them even further if we want to invade europe"
  GER_military_factory:0 "The Geshiko Plan"
  GER_military_factory_desc:0 "Geshiko's rearmament strategy consits of utilizing the Austro-Bavarian region of our Reich for production endeavors."
  GER_panzer_build_up: "§GPhase I§!: Panzer"
@@ -376,7 +374,7 @@
  GER_become_one: "...we must become one"
  GER_become_one_desc: "Our commander does not only represent us but also our brethren in Chi-Ha-Tan as well. As she is both German and Japanese, so should our schools."
  GER_no_hate: "Hated No More"
- GER_no_hate_desc: "Now that Emi is in power, she must hit back at those who previously doubted her. A purge of the school’s Senshado team would complete this objective."
+ GER_no_hate_desc: "Now that Emi is in power, she must hit back at those who previously doubted her. A purge of the school's Senshado team would complete this objective."
  GER_respected_finally: "Respected at Last"
  GER_respected_finally_desc: "With the purge complete, Emi will no longer be hated or bullied by her classmates, and can lead Kuromorimine into a glorious future."
  KMM_PURGE_DECREASE: "§GAllows decisions to decrease the Purge's effects§!"
@@ -391,7 +389,7 @@
  GER_new_bellwall_desc: "Working at Kuromorimine did not mean that Emi forgot her roots at Bellwall. Granting them a new home in the Sudeten Mountains would do, but it would require consent from Gregor."
  GER_kawashiba_cash: "Buy Danzig and Posen using Kashiwaba money"
  GER_kawashiba_cash_desc: "The Kashiwaba sisters are loaded and rich. Now peacefully settled in the new Bellwall, they are more than willing to throw money at school improvement."
- GER_kilimanjaro_gloriana: "Kilimanjaro’s Visit to St. Gloriana"
+ GER_kilimanjaro_gloriana: "Kilimanjaro's Visit to St. Gloriana"
  GER_kilimanjaro_gloriana_desc: "Kiri Shiratori，better known as Kilimanjaro and her sister Nagisa are great affiliates between our friendly relations with West Kureouji Grona Academy. She is also known as a fangirl of Darjeeling of St. Gloriana. Sending her to St Gloriana may bring about peace in our time between our two schools."
  GER_pravda_agreement: "Agreement with Pravda"
  GER_pravda_agreement_desc: "Pravda is an enemy of Kuromorimine, but there is no point fighting them when we have bigger fish to fry. An agreement with them suits all parties for the time being."
@@ -408,11 +406,11 @@
  GER_claims_lost_lands: "Claims on Lost Lands"
  GER_claims_lost_lands_desc: "With Ooarai now with us and Miho settled, it is now time to decide what to do in our quest for our lost lands."
  GER_treaties_friendship: "Treaties of Friendship"
- GER_treaties_friendship_desc: "Miho, being the benevolent mistress she is, has decided that violence is not the answer to Kuromorimine’s wounded pride. Hopefully our demonstrations of peace are well-received."
+ GER_treaties_friendship_desc: "Miho, being the benevolent mistress she is, has decided that violence is not the answer to Kuromorimine's wounded pride. Hopefully our demonstrations of peace are well-received."
  GER_mahonich_conferences: "The Mahonich Conferences"
  GER_mahonich_conferences_desc: "In a meeting with the great Senshado powers at Mahonich, Miho has been given 3 years to show that Kuromorimine does not mean poorly in their restoration of Pride."
  GER_use_yukari: "Use Yukari-san"
- GER_use_yukari_desc: "With Yukari by Miho’s side, she could be sent out again to incite support for the return of our lost territories."
+ GER_use_yukari_desc: "With Yukari by Miho's side, she could be sent out again to incite support for the return of our lost territories."
  GER_take_lost_lands: "Take the Lost Lands"
  GER_take_lost_lands_desc: "The defeat at the river and the subsequent fallout showed Miho that being a nice girl does you no favors. As such, the wounded pride of Kuromorimine must be rectified by force."
  GER_reclaim_sudetenland: "Reclaim the Sudetenland"
@@ -490,7 +488,7 @@
  GER_consitutional_monarchy_desc:0 "While many wish to maintain a strict republic, the people have spoken and all wish to see Koume as Kaiser of our nation, whilst maintaining the parlimentary system we fought so hard for"
  GER_military_industry:0 "Zeitenwende"
  GER_military_industry_desc:0 "This is a turning moment for us, we must plow forwards and save Europe from the tryanny of Pravda"
- GER_military_buildup_desc:0 "The horns of war sound once more, as the final battle nears its occurrence, every man and women in our lands needs to know what’s at stake, every factory must do more build more for eventual total victory."
+ GER_military_buildup_desc:0 "The horns of war sound once more, as the final battle nears its occurrence, every man and women in our lands needs to know what's at stake, every factory must do more build more for eventual total victory."
 # Fuck you fixes your focus tree more ##makes more of a mess
 GER_reform_wave:0 "Reform Wave"
  GER_reform_wave_desc:0 "With Kuromorimine's new constitution in place, we should expand the school size due to the students being able to have different opinions that wouldn't be scrutinize. Let's expand on these."
@@ -1051,7 +1049,6 @@ GER_expand_fortlines_desc:0 ""
  JAP_colonial_production_strategy_desc: "With political ordinance comes an industrial compliance to what ever is needed to execute it. Shizuko Hosomi has devised a brillant plan like so on developing our Asian mainland territories near the Beijing region."
  JAP_colonial_research: "Colonial Research"
  JAP_colonial_research_desc: "Our science departments and scientists can have more to work on if we collect our best minds and institute them together with all vested resources we have. That way we can also compete against major powers in their technologies."
- JAP_colonial_research: "Colonial Research Bonuses"
  JAP_zaibtasu_expansion: "Zaibtasu Expansion"
  JAP_zaibtasu_expansion_desc: "These financial cliques in our academy can provide us aid in industrial and economic sector. But we shall keep a keen eye on their political interference and local actions."
  JAP_professionalism: "Colonial Professionalism"
@@ -1373,7 +1370,6 @@ GER_expand_fortlines_desc:0 ""
  POLITICS_FUKUDA_DESC: "'Excuse me! If we charge recklessly and get ourselves eliminated... That's the real shameful thing to do!'"
 
  ##CHIHATAN LEADER TRAITS
- warrior_code: "Warrior Code"
  shintoism: "Shintoism"
  totsugeki_sanction: "Tostsugeki Sanction"
  emperor_nishi: "Empress Nishi"
@@ -1386,7 +1382,6 @@ GER_expand_fortlines_desc:0 ""
  cht_baroness_ikeda: "Kamikaze Revitalizer"
  centrist_dem: "Centrist"
  mystical_fanaticism: "Mystical Fanaticism"
- princess_of_terror: "Princess of Terror"
  illusive_lady: "Illusive Lady"
  radiant_commander: "Radiant Enlightenment"
  warrior_code2: "Warrior Code"
@@ -1427,7 +1422,7 @@ GER_expand_fortlines_desc:0 ""
  FIN_mine_borders:0 "Mining The Border"
  FIN_mine_borders_desc:0 ""
  FIN_antitank:0 "Anti-Tank Warfare"
- FIN_antitank_desc:0 "Pravda’s might is in their industry and they are making tanks with it. If we are to stand against them, we need the ideal weapons for the task."
+ FIN_antitank_desc:0 "Pravda's might is in their industry and they are making tanks with it. If we are to stand against them, we need the ideal weapons for the task."
  FIN_war_on_independence:0 "War of Independence"
  FIN_war_on_independence_desc:0 "We were once part of Russia, before it was Pravda, and then we freed ourselves from their tyranny. But now the Russians are back, trying to conquer us from the same city the Tsar used to rule, so it is up to us to maintain our independence from another tyrant."
  FIN_diversion_form:0 "Diversionary Formations"
@@ -1435,7 +1430,7 @@ GER_expand_fortlines_desc:0 ""
  FIN_white_snipers:0 "White Snipers"
  FIN_white_snipers_desc:0 "Now that we have plans on how to use this frozen land to our advantage, we need to become one with the snow, one with the forest. We shall put a bullet in the head of any who try to conquer us, and they shall never see that bullet coming."
  FIN_antisoviet_propaganda:0 "Anti-Pravda Propaganda"
- FIN_antisoviet_propaganda_desc:0 "If we are to defeat the reds on the battlefield, we first have to defeat them in our homes. There are still some supporters of Pravda’s ideas in our academy, so we should end all of them before the fight."
+ FIN_antisoviet_propaganda_desc:0 "If we are to defeat the reds on the battlefield, we first have to defeat them in our homes. There are still some supporters of Pravda's ideas in our academy, so we should end all of them before the fight."
  
  FIN_eastern_question:0 "Eastern Question"
  FIN_eastern_question_desc:0 "Now that the will of the people has been secured we find a new internal threat, the discussion and rivalry of the leftist and social democrats and the center traditionalist democrats, we need to choose between these two to find stability at last."
@@ -1565,7 +1560,7 @@ GER_expand_fortlines_desc:0 ""
  FIN_join_barbarossa:0 "Join 'Barbarossa'"
  FIN_join_barbarossa_desc:0 "The time has come! Our allies have started a war against our enemies. It's our time to strike! Glory to Jakosota!"
  FIN_german_military_mission:0 "Kuromorimine Military Mission"
- FIN_german_military_mission_desc:0 "We need the aid of Kuromorimine’s professional army to be ready to stand against the red threat. Therefore, we shall ask for military advisors."
+ FIN_german_military_mission_desc:0 "We need the aid of Kuromorimine's professional army to be ready to stand against the red threat. Therefore, we shall ask for military advisors."
  FIN_german_industry:0 "Kuromorimine Industry"
  FIN_german_industry_desc:0 "Despite being strong and having great ambition, our industry is too small for the task. Thus, asking for external help would not hurt."
  FIN_german_tactics:0 "Kuromorimine Strategy"
@@ -1815,8 +1810,8 @@ GER_expand_fortlines_desc:0 ""
  FIN_communism_party_long:0 "Communist Party of Jatkosota"
  FIN_democratic_party:0 "National Coalition Party"
  FIN_democratic_party_long:0 "NCP"
- FIN_neutrality_party:0 "Monarchists"
- FIN_neutrality_party_long:0 "Monarchists"
+ #FIN_neutrality_party:0 "Monarchists"
+ #FIN_neutrality_party_long:0 "Monarchists"
  FIN_mika_purge:0 "Purged"
  FIN_compromise_tt:0 "§RWe will send a proposal to the Pravda to make a compromise between our countries.§!"
  FIN_coup_in_Turku_tt:0 "§R3 divisions§! will revolt in the town of §RTurku§!"
