--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -165,8 +165,6 @@
  POL_exile_democratic_party_long:0 "Partia Liberalno-Demokratyczna"
  ITA_partito_socialista_italiano:0 "PSI"
  ITA_partito_socialista_italiano_long:0 "Partito Socialista Italiano"
- ITA_partito_democratico_del_lavoro:0 "PDL"
- ITA_partito_democratico_del_lavoro_long:0 "Partito Democratico del Lavoro"
  ITA_democrazia_cristiana:0 "DC"
  ITA_democrazia_cristiana_long:0 "Democrazia Cristiana"
  AUS_communism_party:0 
@@ -807,7 +805,7 @@
  ALT_neutrality_party:0 "KGM"
  ALT_neutrality_party_long:0 "Karakorum Government"
  KAL_communism_party:0 "KPB"
- KAL_communism_party_long:0 "The Kalmyk People’s Bolshevik Union"
+ KAL_communism_party_long:0 "The Kalmyk People's Bolshevik Union"
  KAL_fascism_party:0 "KLG"
  KAL_fascism_party_long:0 "The Kalmyk Legion"
  KAL_democratic_party:0 "The People's Khural"
@@ -849,14 +847,14 @@
  DAG_fascism_party:0 "DNS"
  DAG_fascism_party_long:0 "Dagestani Front for National Salvation"
  DAG_democratic_party:0 "PAD"
- DAG_democratic_party_long:0 "The People’s Assembly of Dagestan"
+ DAG_democratic_party_long:0 "The People's Assembly of Dagestan"
  DAG_neutrality_party:0 "Supporters of the North Caucasian Emirate"
  BYA_communism_party:0 "BBC"
  BYA_communism_party_long:0 "Buryat Bolshevik Regional Committee"
  BYA_fascism_party:0 "BUP"
  BYA_fascism_party_long:0 "Buryat Ultranationalist Party"
  BYA_democratic_party:0 "TPK"
- BYA_democratic_party_long:0 "The People’s Khural"
+ BYA_democratic_party_long:0 "The People's Khural"
  BYA_neutrality_party:0 "Chakravartin Restorationists"
 
  KHA_communism_party:0 "KBC"
@@ -864,7 +862,7 @@
  KHA_fascism_party:0 "YKP"
  KHA_fascism_party_long:0 "Neo Yensei-Kyrgyz Party"
  KHA_democratic_party:0 "TPK"
- KHA_democratic_party_long:0 "The People’s Khural"
+ KHA_democratic_party_long:0 "The People's Khural"
  KHA_neutrality_party:0 "Khakas Regional Committee"
 
  FER_communism_party:0 "EBA"
