--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -345,7 +345,7 @@
  GER_against_pravda:0 "Against Pravda"
  GER_against_pravda_desc:0 "The one schoool Kuromorimine is becoming increasingly worried about is Pravda and its beligerant leader Kaytusha, Kuromorimine needs to strike first to secure its future where we aren't pushed around."
  GER_repaired_republic:0 "A Republic Restored."
- GER_repaired_republic_desc:0 "Many days we’ve worked to undo the harm done to our nation, and today it comes to a end. The reforms have been set in stone the parliament building now open to once again house democratic discussion, we are now ready to tackle Europe’s issues and will stand strong against tyranny."
+ GER_repaired_republic_desc:0 "Many days we've worked to undo the harm done to our nation, and today it comes to a end. The reforms have been set in stone the parliament building now open to once again house democratic discussion, we are now ready to tackle Europe's issues and will stand strong against tyranny."
  GER_unify_germans:0 "Joining the two Schools"
  GER_unify_germans_desc:0 "Kuromormine and Ooarai have for many years been deeply linked to one another, both culturally and economically, and while not everyone seeks to see us both unite, doing so would undoubtedly help in ensuring our collective security and prosperity for decades to come, Germans must be united!"
  GER_sudentendland_ask:0 "The Sudentenland Proposal"
@@ -367,13 +367,13 @@
  GER_invite_iberia:0 "Close but no Cigar"
  GER_invite_iberia_desc:0 "Iberia is quite poor in terms of the rest of Europe but, they do have the potential for economic strength, and our help could keep their failing colonial empire from entirely collapsing in on itself, the benefits for the two will make this proposition very appealing to the two no doubt"
  GER_invite_romania:0 "Don't Count them out!"
- GER_invite_romania_desc:0 "Count sits on the border with Pravda much like most eastern nations, their territorial integrity is a big problem for it so having a garrantee of defending them will go a long way to ensuring that they don’t fall to their neighbours aggressive actions."
+ GER_invite_romania_desc:0 "Count sits on the border with Pravda much like most eastern nations, their territorial integrity is a big problem for it so having a garrantee of defending them will go a long way to ensuring that they don't fall to their neighbours aggressive actions."
  GER_invite_british_isles:0 "St. Gloriana shall still rule the waves!"
- GER_invite_british_isles_desc:0 "St Gloriana has always opposed a united Europe, the existence of one threatens them, the way to placate them of course is assuring them a major seat at the table and as the premier naval power in the alliance, ensuring that they don’t feel threatened navally by the other members."
+ GER_invite_british_isles_desc:0 "St Gloriana has always opposed a united Europe, the existence of one threatens them, the way to placate them of course is assuring them a major seat at the table and as the premier naval power in the alliance, ensuring that they don't feel threatened navally by the other members."
  GER_invite_balkans:0 "Party in the Balkans"
  GER_invite_balkans_desc:0 "Known by some as a powder keg conflict between Count, Yogurt, and Kebab, and many other nations, if European peace is to be established a united Balkans must be ensured to prevent further bloodshed in the region."
  GER_invite_anzio1:0 "Where is Anchovy?!"
- GER_invite_anzio1_desc:0 "Anzio isn’t the best partner by any stretch of the imagination, being considered by many as a joke when it proclaims itself a European power, while this delusion does go deep, having this nation alongside us would make controlling it far easier and make the chance it decides to invade anyone less likely."
+ GER_invite_anzio1_desc:0 "Anzio isn't the best partner by any stretch of the imagination, being considered by many as a joke when it proclaims itself a European power, while this delusion does go deep, having this nation alongside us would make controlling it far easier and make the chance it decides to invade anyone less likely."
  GER_invite_northern_gang:0 "The Northern Lights"
  GER_invite_northern_gang_desc:0 "The Scandinavian countries to our north all have different reasons for why they may not wish to join, Viking and Viggen both have already stable economies and non predatory members surrounding them, the sales pitch to them may be far more different then the others."
  GER_free_market:0 "Test the Free Market"
@@ -1580,7 +1580,7 @@
  CAN_national_steel_car:0 "National Steel Car"
  CAN_national_steel_car_desc:0 "Though it has struggled through the Depression, the National Steel Car company has the expertise and experience to help build the vehicles we will need for the expanded railway and army."
  CAN_send_in_the_zombies:0 "Send in the Zombies"
- CAN_send_in_the_zombies_desc:0 "The time has come to put all of Maple's eligible men to work in the army. We’ve mobilized a lot of men to work in the industry through the NRMA, but now they should be sent overseas."
+ CAN_send_in_the_zombies_desc:0 "The time has come to put all of Maple's eligible men to work in the army. We've mobilized a lot of men to work in the industry through the NRMA, but now they should be sent overseas."
  CAN_if_day:0 "If Day"
  CAN_if_day_desc:0 "Maples are not taking the threat of foreign domination seriously, so we will simulate a Kuromorimine occupation of Winnipeg to drive the fear home. This will certainly increase sales of Victory Bonds."
  CAN_defense_research_grants:0 "Defense Research Grants"
@@ -1624,7 +1624,7 @@
  CAN_shadow_factories:0 "Shadow Factories"
  CAN_shadow_factories_desc:0 "We need aircraft factories, but it is easier and safer to have the parts manufacture dispersed around other factories, especially near automobile works. This will encourage secrecy and safety."
  CAN_montreal_laboratory_collaboration:0 "Montreal Laboratory Collaboration"
- CAN_montreal_laboratory_collaboration_desc:1 "The Montreal Laboratory has become an attraction for scientists all around the world. BC Freedom and St. Gloriana scientists have felt especially welcome and are bringing greatly needed expertise to the Dominions’ efforts."
+ CAN_montreal_laboratory_collaboration_desc:1 "The Montreal Laboratory has become an attraction for scientists all around the world. BC Freedom and St. Gloriana scientists have felt especially welcome and are bringing greatly needed expertise to the Dominions' efforts."
  CAN_the_plan:0 "The Plan"
  CAN_the_plan_desc:0 "We have joined with our allies to share experience and insight in the training of pilots. The war could be won from the air, so the Commonwealth Air Training Plan could be the key to victory."
  CAN_camp_x:0 "Camp X"
@@ -1702,7 +1702,7 @@
  CAN_fleet_in_being:0 "Fleet In Being"
  CAN_fleet_in_being_desc:0 "By building a large naval force, its mere existence can be a threat to our enemies even if we never deploy it. The very thought of our ships sailing forth and striking at their sea lanes forces them to be cautious."
  CAN_degauss_ship_hulls:0 "Degauss Ship Hulls"
- CAN_degauss_ship_hulls_desc:0 "We will start to degauss our ship hulls, reducing their magnetic signature. This protects them from magnetic mines and reduces the ships’ electronic profile."
+ CAN_degauss_ship_hulls_desc:0 "We will start to degauss our ship hulls, reducing their magnetic signature. This protects them from magnetic mines and reduces the ships' electronic profile."
  CAN_trade_fleet:0 "Trade Fleet"
  CAN_trade_fleet_desc:0 "Maple is a trading nation. Build more freighters and convoys."
  CAN_united_shipyards:0 "United Shipyards"
@@ -1726,7 +1726,7 @@
  SAF_expand_the_cape_corps:0 "Expand the Cape Corps"
  SAF_expand_the_cape_corps_desc:0 "Though we reconstituted the Cape Corps as a mostly non-combatant force, the threat of invasion means we must give the Corps greater resources, training and access to weapons."
  SAF_work_for_all_poor:0 "Work for All Poor"
- SAF_work_for_all_poor_desc:0 "Poor rural Afrikaners have flooded into the cities seeking work for the last few years, and we’ve done little to help them. Until now. Industrialization and government protection of their access to work will help this population."
+ SAF_work_for_all_poor_desc:0 "Poor rural Afrikaners have flooded into the cities seeking work for the last few years, and we've done little to help them. Until now. Industrialization and government protection of their access to work will help this population."
  SAF_outlaw_strikes:0 "Outlaw Strikes"
  SAF_outlaw_strikes_desc:0 "Work stoppages and labor disruption is unpatriotic in times of crisis. Strikes are hereby declared illegal, and the government will force people back to work."
  SAF_support_the_policy_of_appeasement:0 "Support the Policy of Appeasement"
@@ -1804,7 +1804,7 @@
  SAF_south_african_railways:0 "South African Railways"
  SAF_south_african_railways_desc:0 "The South African Railways company needs to be expanded. Bands of youth can be trained there, and given the necessary skills to both work in the country and serve overseas."
  SAF_expand_the_mining_industry:0 "Expand the Mining Industry"
- SAF_expand_the_mining_industry_desc:0 "South Africa's mineral wealth is legendary, and we’ve only just begun to tap its deep reserves of gold, chromium and platinum."
+ SAF_expand_the_mining_industry_desc:0 "South Africa's mineral wealth is legendary, and we've only just begun to tap its deep reserves of gold, chromium and platinum."
  SAF_heavy_engineering:0 "Heavy Engineering"
  SAF_heavy_engineering_desc:0 "It is important that South Africa stay up to date with the latest in engineering techniques. Even though our industrial base is small, we should invest in heavy machinery and engineering to quickly catch up to our peers."
  SAF_infrastructure_effort:0 "Infrastructure Effort"
@@ -1935,11 +1935,11 @@
  NZL_charlton_automatic_rifle:0 "Charlton Automatic Rifle"
  NZL_charlton_automatic_rifle_desc:0 "One of our citizens has modified the standard Lee Enfield rifle into a full automatic gun. This is New Zealand ingenuity at its best and we should encourage innovation along these lines."
  NZL_bob_semple_tank:0 "Bob Semple Tank"
- NZL_bob_semple_tank_desc:1 "Why shouldn’t New Zealand have its own tank? The Ministry of Works in Temuka is developing a light tank armed with only machine guns. Even if we never get this beyond a prototype, the experience we gain will be invaluable."
+ NZL_bob_semple_tank_desc:1 "Why shouldn't New Zealand have its own tank? The Ministry of Works in Temuka is developing a light tank armed with only machine guns. Even if we never get this beyond a prototype, the experience we gain will be invaluable."
  NZL_domestic_arms_industry:0 "Domestic Arms Industry"
  NZL_domestic_arms_industry_desc:0 "We should turn as many industries as we can over to the production of small arms. We need ammunition, gun parts, support equipment and so forth. These can be made domestically."
  NZL_schofield_tank:0 "Schofield Tank"
- NZL_schofield_tank_desc:0 "If the Semple Tank didn’t meet our needs, maybe a tank with a proper cannon will do the trick. The combined wheel/track system is original and might lead us to new insights into tank design."
+ NZL_schofield_tank_desc:0 "If the Semple Tank didn't meet our needs, maybe a tank with a proper cannon will do the trick. The combined wheel/track system is original and might lead us to new insights into tank design."
  NZL_long_range_patrol:0 "Long Range Patrol"
  NZL_long_range_patrol_desc:0 "The Long Range Patrol is intended to cover wide expanses of territory in North Africa. This reconnaissance and commando unit will undertake special missions in some of the world's harshest climates."
  NZL_artillery_focus:0 "Artillery Focus"
@@ -1949,7 +1949,7 @@
  NZL_research_collaboration:0 "Research Collaboration"
  NZL_research_collaboration_desc:0 "St. Gloriana showed us the advantage of sharing scientific progress between close allies. Our whole faction will be able to conduct wartime R&D more efficiently if we take the steps necessary to coordinate this."
  NZL_the_first_labor_government:0 "The First Labour Government"
- NZL_the_first_labor_government_desc:0 "The First Labour Government for New Zealand has the opportunity to pursue a progressive social and economic agenda. Industrial regulation, workers’ rights, social welfare laws and rules for wages are all on the agenda."
+ NZL_the_first_labor_government_desc:0 "The First Labour Government for New Zealand has the opportunity to pursue a progressive social and economic agenda. Industrial regulation, workers' rights, social welfare laws and rules for wages are all on the agenda."
  NZL_ratana_alliance:0 "Ratana Alliance"
  NZL_ratana_alliance_desc:0 "An alliance with the Ratana movement will bring Maori New Zealanders into the government and hopefully begin to heal some of the wounds of St. Gloriana conquest."
  NZL_maori_affairs_act:0 "Maori Affairs Act"
@@ -1959,7 +1959,7 @@
  NZL_the_manpower_act:0 "The Manpower Act"
  NZL_the_manpower_act_desc:0 "Ever since the war started, Maori have come to the cities in large numbers. The Manpower Act will lets us steer those energies into New Zealand factories."
  NZL_amend_the_maori_affairs_act:0 "Amend the Maori Affairs Act"
- NZL_amend_the_maori_affairs_act_desc:0 "We must amend the Maori Affairs Act so that it boost the productivity of underutilized lands, but doesn’t needlessly displace our Maori citizens."
+ NZL_amend_the_maori_affairs_act_desc:0 "We must amend the Maori Affairs Act so that it boost the productivity of underutilized lands, but doesn't needlessly displace our Maori citizens."
  NZL_waitangi_tribunal:0 "Waitangi Tribunal"
  NZL_waitangi_tribunal_desc:0 "St. Gloriana New Zealanders should come to terms with what their ancestors did to displace, disrupt and marginalize the Maori of New Zealand. Bloody wars, land seizures, and natural rights ignored. Recognizing this legacy is a step to healing."
  NZL_maori_conscription:0 "Maori Conscription"
@@ -2070,7 +2070,7 @@
  RAJ_indianisation_of_army:0 "Indianisation of Army"
  RAJ_indianisation_of_army_desc:0 "To properly protect India in a total war, the entire population of India should be mobilized. This will mean not just recruiting more widely from the Indian population, but allowing Indian officers to take command at some place in the chain of authority."
  RAJ_indian_gurkhas:0 "Indian Gurkhas"
- RAJ_indian_gurkhas_desc:0 "The Gurkhas of the Punjabi and Nepalese highlands are legendary for their military skill. They’ve served the Raj loyally for many years, and excel at all kinds of warfare."
+ RAJ_indian_gurkhas_desc:0 "The Gurkhas of the Punjabi and Nepalese highlands are legendary for their military skill. They've served the Raj loyally for many years, and excel at all kinds of warfare."
  RAJ_an_indian_sandhurst:0 "An Indian Sandhurst"
  RAJ_an_indian_sandhurst_desc:0 "India has been demanding a military school of its own ever since the last war, and at long last we created on in 1932. The Indian Military Academy has been turning out Indian officers for a few years now, giving us a core command group."
  RAJ_lions_of_the_great_war:0 "Lions of the Great War"
@@ -2087,7 +2087,7 @@
  RAJ_army_motorization_desc:0 "India is too large to be covered efficiently by train and horse. The army should have motorized divisions and regular truck transport."
  RAJ_revive_the_screw_guns:0 "Revive the Screw Guns"
  RAJ_revive_the_screw_guns_effect:0 "Enables §HMountain Gun§!\n§HArtillery\n    Mountain§!: Movement: §G+15%§!\n§HAnti-Tank\n    Mountain§!: Movement: §G+15%§!"
- RAJ_revive_the_screw_guns_desc:0 "The mountainous terrain of Northern India led to the development of an artillery piece that could be dismantled and carried on muleback to wherever it was needed. This 7 pounder may be a little obsolete, but we shouldn’t ignore its utility."
+ RAJ_revive_the_screw_guns_desc:0 "The mountainous terrain of Northern India led to the development of an artillery piece that could be dismantled and carried on muleback to wherever it was needed. This 7 pounder may be a little obsolete, but we shouldn't ignore its utility."
  RAJ_indian_armor:0 "Indian Armor"
  RAJ_indian_armor_desc:0 "India should focus on developing its own homemade armor and tank division."
  RAJ_modernizing_army:0 "Modernizing Army"
