--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -471,10 +471,10 @@
  france.13.b:0 "We must continue the fight!"
  france.14.t:0 "Triumph in BC Freedom"
  france.14.d:0 "Our victory in BC Freedom is nearly complete. The BC government has asked for an armistice, and our diplomats have prepared terms which they have agreed to. They will retain control of southern BC Proper, while we are free to occupy the rest. \n\nParades of our troops are now in display to further wane the BC spirit and of that of her allies. A victory for Kuromorimine indeed!"
- france.14.a:0 "Establish Mazginot."
- establishing_vichy_tt:1 "§YVichy Freedom§! will be established in southern BC. \n§YVichy Freedom§! will gain all §YBC colonial territory§!\nA percentage of §YBC§! forces will be transferred to §YVichy Freedom§!\n(§YVichy Freedom§!):\n §YMouvement Franciste§! becomes the ruling party.\n §YRena Andou§! becomes leader for the §YFascist§! party.\n Gains National Spirit §YOccupation Costs§!, which grants (Consumer Goods Factories: §Y5%§!)\n Moves capital to §YAuvergne§!"
+ france.14.a:0 "Establish BC Vichy."
+ establishing_vichy_tt:1 "§YVichy Freedom§! will be established in southern BC. \n§YVichy Freedom§! will gain all §YBC colonial territory§!\nA percentage of §YBC§! forces will be transferred to §YVichy Freedom§!\n(§YVichy Freedom§!):\n §YMouvement Franciste§! becomes the ruling party.\n §YRuka Oshida§! becomes leader for the §YFascist§! party.\n Gains National Spirit §YOccupation Costs§!, which grants (Consumer Goods Factories: §Y5%§!)\n Moves capital to §YAuvergne§!"
  france.14.b:0 "No, Kuromorimine will conquer all!"
- france.14.c:0 "Establish Rena Freedom."
+ france.14.c:0 "Establish Freedom France."
  france.15.t:0 "Kuromorimine Refuses Armistice!"
  france.15.d:0 "The Kuros have refused our request for an armistice! They are evidently seeking to enslave us all... we have no choice but to fight to the last!"
  france.15.a:0 "We are doomed!"
@@ -494,7 +494,7 @@
  france.20.t:0 "Resistance to the armistice"
  france.20.d:0 "In the wake of the BC armistice with Kuromorimine and establishment of a new government in Maginot, a group of senior officers have rebelled against the new BC government. Rena Andou delivered a radio broadcast urging resistance against the collaborationist Maginot regime. Andou effectively assumes leadership of the BC Freedom Forces and continues the fight against the Kuros."
  france.20.a:0 "The fight for BC Freedom continues."
- france.20.a_tt:0 "§YRena Andou becomes leader of BC Freedom§!"
+ france.20.a_tt:0 "§Ruka Oshida becomes leader of BC Freedom§!"
  france.21.t:0 "Workers threaten with strikes"
  france.21.d:0 "Following the sacking of two workers at a large factory, struggles between workers and factory owners have erupted across the country. Workers backed by [Root.GetCommunistParty] have organized and are demanding better conditions, such as higher wages and shorter work weeks. This will greatly reduce the output of our factories and is viewed as a victory for [Root.GetCommunistParty]. We are invited to Matignon for negotiations. Do we give in to their demands or stand firm and risk a countrywide strike?"
  france.21.a:0 "Let them strike"
