--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -246,16 +246,16 @@
  CZE_GER_fascism_autonomy_reichsprotectorate_DEF:0 "the Reichsprotektorat Böhmen-Mähren"
  POL_GER_fascism_autonomy_reichsprotectorate_DEF:1 "The Generalgouvernement"
  POL_GER_fascism_autonomy_reichsprotectorate:1 "The Generalgouvernement"
- FRA_FREE_democratic:0 "BC France"
- FRA_FREE_democratic_DEF:0 "BC France"
- FRA_VICHY_fascism:0 "Maginot Freedom"
- FRA_VICHY_fascism_DEF:0 "Maginot Freedom"
- FRA_VICHY_neutrality:0 "Oshida Freedom"
- FRA_VICHY_neutrality_DEF:0 "Oshida Freedom"
- FRA_GER_fascism_autonomy_reichsprotectorate:0 "Maginot Freedom"
- FRA_GER_fascism_autonomy_reichsprotectorate_DEF:0 "Maginot Freedom"
- FRA_GER_fascism_autonomy_puppet:0 "Maginot Freedom"
- FRA_GER_fascism_autonomy_puppet_DEF:0 "Maginot Freedom"
+ FRA_FREE_democratic:0 "Freedom France"
+ FRA_FREE_democratic_DEF:0 "Freedom France"
+ FRA_VICHY_fascism:0 "BC Vichy"
+ FRA_VICHY_fascism_DEF:0 "BC Vichy"
+ FRA_VICHY_neutrality:0 "BC Vichy"
+ FRA_VICHY_neutrality_DEF:0 "BC Vichy"
+ FRA_GER_fascism_autonomy_reichsprotectorate:0 "BC Vichy"
+ FRA_GER_fascism_autonomy_reichsprotectorate_DEF:0 "BC Vichy"
+ FRA_GER_fascism_autonomy_puppet:0 "BC Vichy"
+ FRA_GER_fascism_autonomy_puppet_DEF:0 "BC Vichy"
  FRA_UK_democratic:0 "BC-Gloriana Union"
  FRA_UK_democratic_DEF:0 "the BC-Gloriana Union"
  FRA_UK_fascism:0 "Restored Norman Empire"
