--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -454,12 +454,12 @@
  NOR_subject_DEF:0 "$OVERLORDADJ$ $NOR$"
  DEN_fascism:0 "North Sea Empire"
  DEN_fascism_DEF:0 "the North Sea Empire"
- DEN_democratic:0 "Danmork"
- DEN_democratic_DEF:0 "Danmork"
- DEN_neutrality:0 "Kingdom of Danmork"
- DEN_neutrality_DEF:0 "the Kingdom of Danmork"
- DEN_communism:0 "Danmork Civil Union"
- DEN_communism_DEF:0 "the Danmork Civil Union"
+ DEN_democratic:0 "Danmark"
+ DEN_democratic_DEF:0 "Danmark"
+ DEN_neutrality:0 "Kingdom of Danmark"
+ DEN_neutrality_DEF:0 "the Kingdom of Danmark" #honk I will find you in your sleep if you change denmarks name to danmork again
+ DEN_communism:0 "Danmark Civil Union"
+ DEN_communism_DEF:0 "the Danmark Civil Union"
  DEN_fascism_ADJ:0 "Danish"
  DEN_democratic_ADJ:0 "Danish"
  DEN_neutrality_ADJ:0 "Danish"
